--- a/apps/agent-config/Chart/cm.yaml
+++ b/apps/agent-config/Chart/cm.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.global.infraConfigName }}
+  name: {{ .Values.infraConfigName }}
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "-1"
