--- a/apps/agent-config/templates/secret.yaml
+++ b/apps/agent-config/templates/secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 type: Opaque
 metadata:
   name: {{ .Values.infraSecretName }}
+  annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "-1"
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation,HookFailed
