--- a/apps/agent-config/templates/secret.yaml
+++ b/apps/agent-config/templates/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: {{ .Values.infraSecretName }}
+  name: subscriber-secret
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "-1"
