--- a/apps/agent-config/config.yaml
+++ b/apps/agent-config/config.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: agent-config
-  namespace: litmus
+  namespace: argocd
 spec:
   project: default
   source:
