--- a/apps/agent-config/config.yaml
+++ b/apps/agent-config/config.yaml
@@ -14,7 +14,7 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: my-namespace
+    namespace: litmus
   syncPolicy:
     automated:
       selfHeal: true
