--- a/apps/app.yaml
+++ b/apps/app.yaml
@@ -9,8 +9,8 @@ spec:
     repoURL: https://github.com/Navanjane/litmus-agent-argo
     targetRevision: main
     path: apps
-    # directory:
-    #   recurse: true
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
